<resources>
    <string name="app_name">Quiz App</string>
    <string name="option1">Bujangasanam</string>
    <string name="option2">Vajrasanam</string>
    <string name="option3">Virabhadrasanam</string>
    <string name="option4">Dhanurasanam</string>
    <string name="prev">Previous Question</string>
    <string name="next">Next Question</string>
    <string name="question1">1. Choose the Correct Name for this Yoga Pose.</string>
    <string name="question2">2. Choose the Correct Name for this Yoga Pose.</string>
    <string name="question3">3. Check all the Names for this Yoga Pose.</string>
    <string name="question4">4. Enter the Correct Name for this Yoga Pose.</string>
    <string name="question5">5. Choose the Correct Name for this Yoga Pose.</string>
    <string name="q2option1">Bujangasanam</string>
    <string name="q2option2">Vajrasanam</string>
    <string name="q2option3">Virabhadrasanam</string>
    <string name="q2option4">Dhanurasanam</string>
    <string name="q3option1">Sarvangasanam</string>
    <string name="q3option2">Bow Pose</string>
    <string name="q3option3">Boat Pose</string>
    <string name="q3option4">Dhanurasanam</string>
    <string name="q4option">Enter Yoga Pose Name</string>
    <string name="q5option1">Thirikonasanam</string>
    <string name="q5option2">Vajrasanam</string>
    <string name="q5option3">Virabhadrasanam</string>
    <string name="q5option4">Shalabhasana</string>
    <string name="submit">SUBMIT</string>
    <string name="reset">Take the Quiz Again</string>
    <string name="q1answer">Virabhadrasanam</string>
    <string name="q2answer">Bujangasanam</string>
    <string name="q3answer">Bow Pose, Dhanurasanam</string>
    <string name="q4answer">HALASANAM</string>
    <string name="q5answer">Shalabhasana</string>
    <string name="q1Optanswer">Virabhadrasanam</string>
    <string name="q2Optanswer">Bujangasanam</string>
    <string name="q3Optanswer1">Bow Pose</string>
    <string name="q3Optanswer2">Dhanurasanam</string>
    <string name="q4Optanswer">HALASANAM</string>
    <string name="q5Optanswer">Shalabhasana</string>
    <string name="resultmsg">Your Score is : </string>
    <string name="userMsg">Your Answer : </string>
    <string name="correctMsg">Correct Answer : </string>
</resources>
