<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_vg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ark.quizapp.MainActivity">

        <TextView
            android:id="@+id/question_nbr_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/question1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/yogapose_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCFF90"
            android:contentDescription="@string/option3"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="centerInside"
            android:src="@drawable/virabhadrasana2" />

        <RadioGroup
            android:id="@+id/q1_options"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/option1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/option2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/option3"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/option4"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/correct_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFF59D"
            android:text="@string/q1answer"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/question_nbr_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/question2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/yogapose_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCFF90"
            android:contentDescription="@string/q2option1"
            android:scaleType="centerInside"
            android:src="@drawable/bhujangasana" />

        <RadioGroup
            android:id="@+id/q2_options"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q2option1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q2radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q2option2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q2radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q2option3"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q2radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q2option4"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/correct_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFF59D"
            android:text="@string/q1answer"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/question_nbr_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/question3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/yogapose_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCFF90"
            android:contentDescription="@string/q3option4"
            android:scaleType="centerInside"
            android:src="@drawable/dhanurasana" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dip"
            android:text="@string/q3option1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/q3option2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/q3option3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dip"
            android:text="@string/q3option4"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/correct_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFF59D"
            android:text="@string/q1answer"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/question_nbr_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/question4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/yogapose_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCFF90"
            android:contentDescription="@string/q4answer"
            android:scaleType="centerInside"
            android:src="@drawable/halasana" />

        <EditText
            android:id="@+id/yogapose_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/q4option"
            android:inputType="textCapCharacters" />

        <TextView
            android:id="@+id/correct_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFF59D"
            android:text="@string/q1answer"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/question_nbr_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/question5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/yogapose_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCFF90"
            android:contentDescription="@string/q5answer"
            android:scaleType="centerInside"
            android:src="@drawable/shalabhasana" />

        <RadioGroup
            android:id="@+id/q5_options"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q5radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q5option1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q5radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q5option2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q5radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q5option3"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q5radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dip"
                android:text="@string/q5option4"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/correct_answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFF59D"
            android:text="@string/q1answer"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="#1B5E20"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#004D40"
            android:onClick="evaluateQuiz"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#048271"
            android:onClick="resetButton"
            android:text="@string/reset"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>